external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_bad_name.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_bad_name.move:4:13
  │
4 │         let {};
  │             ^
  │             │
  │             Unexpected '{'
  │             Expected a variable or struct name
